--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -20,137 +20,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0938f3d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metadata_filename = 'metadata.csv'\n",
-    "counts_dirname = 'counts'\n",
-    "tokens_dirname = 'tokens'\n",
-    "\n",
-    "metadata_df = pd.read_csv(metadata_filename)\n",
-    "\n",
-    "filtered_df = metadata_df[(metadata_df.language == \"['en']\") & (metadata_df.type == 'Text')]\n",
-    "\n",
-    "SELECTED_COLUMNS = ['id', 'title', 'author', 'authoryearofbirth', 'authoryearofdeath']\n",
-    "filtered_df = filtered_df.dropna(subset=SELECTED_COLUMNS)\n",
-    "filtered_df = filtered_df[SELECTED_COLUMNS]\n",
-    "filtered_df = filtered_df.reset_index(drop=True)\n",
-    "\n",
-    "author_count = filtered_df['author'].value_counts()\n",
-    "many_works_author = author_count[author_count >= 10]\n",
-    "filtered_df = filtered_df[filtered_df.author.isin(many_works_author.index.to_numpy())].reset_index()\n",
-    "\n",
-    "'PG8700' in filtered_df.id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "df4ee5a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PG6248']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filtered_df = filtered_df.sample(n=50, random_state=2).reset_index()\n",
-    "\n",
-    "docs = []\n",
-    "docs_unavail_pg_ids = []\n",
-    "for pg_id in filtered_df.id:    \n",
-    "    try:\n",
-    "        doc = ' '.join(get_book(pg_id, os.path.join(tokens_dirname), level='tokens'))\n",
-    "        docs.append(doc)\n",
-    "    except:\n",
-    "        docs_unavail_pg_ids.append(pg_id)\n",
-    "        \n",
-    "docs_unavail_pg_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fe48dd67",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filtered_df = filtered_df[~filtered_df.id.isin(docs_unavail_pg_ids)]\n",
-    "'PG6248' in filtered_df.id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1c05b27e",
+   "execution_count": 11,
+   "id": "11e2e6e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df = filtered_df[['id', 'author']]\n",
-    "filtered_df.insert(2, 'text', docs, True)\n",
-    "# filtered_df"
+    "train_df = pd.read_csv('train.csv')\n",
+    "val_df = pd.read_csv('val.csv')\n",
+    "test_df = pd.read_csv('test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "9a5f32d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['aa', 'aa coom', 'aa doa', ..., 'νοῡς like', 'στοά',\n",
-       "       'στοά translator'], dtype=object)"
+       "array(['aa', 'aa armature', 'aa base', ..., 'ἄνδρα μοι', 'ἔννεπε',\n",
+       "       'ἔννεπε surely'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vectorizer = CountVectorizer(analyzer='word', ngram_range=(1, 2), stop_words='english')\n",
-    "X = vectorizer.fit_transform(filtered_df.text)\n",
+    "X = vectorizer.fit_transform(train_df.text)\n",
     "vectorizer.get_feature_names_out()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "7c47dfa0",
    "metadata": {},
    "outputs": [
@@ -161,12 +67,12 @@
        "       [0, 0, 0, ..., 0, 0, 0],\n",
        "       [0, 0, 0, ..., 0, 0, 0],\n",
        "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [7, 1, 1, ..., 0, 0, 0],\n",
        "       [0, 0, 0, ..., 0, 0, 0],\n",
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "ddbebc95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(49, 1668521)"
+       "(47, 720671)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
