--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 217,
    "id": "e2adbc46",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,28 @@
     "\n",
     "from pathlib import Path\n",
     "import os\n",
-    "from data_io import get_book"
+    "from data_io import get_book\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 218,
+   "id": "6e26aaea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def author_to_onehop(df):\n",
+    "    s = pd.Series(list(df['author']))\n",
+    "    one_hot = pd.get_dummies(s).values\n",
+    "    pd.get_dummies(s).values\n",
+    "    df = df.join(one_hot)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
    "id": "0938f3d4",
    "metadata": {},
    "outputs": [
@@ -29,7 +45,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,10 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 220,
    "id": "df4ee5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[220], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m     val_ids\u001b[39m.\u001b[39mappend(val_id)\n\u001b[1;32m     19\u001b[0m \u001b[39m# one hot\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m filtered_df \u001b[39m=\u001b[39m author_to_onehop(filtered_df)\n\u001b[1;32m     22\u001b[0m train_df \u001b[39m=\u001b[39m filtered_df[filtered_df\u001b[39m.\u001b[39mid\u001b[39m.\u001b[39misin(train_ids)]\n\u001b[1;32m     23\u001b[0m test_df \u001b[39m=\u001b[39m filtered_df[filtered_df\u001b[39m.\u001b[39mid\u001b[39m.\u001b[39misin(test_ids)]\n",
+      "Cell \u001b[0;32mIn[218], line 5\u001b[0m, in \u001b[0;36mauthor_to_onehop\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m      3\u001b[0m one_hot \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mget_dummies(s)\u001b[39m.\u001b[39mvalues\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(pd\u001b[39m.\u001b[39mget_dummies(s)\u001b[39m.\u001b[39mvalues)\n\u001b[0;32m----> 5\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mjoin(one_hot)\n\u001b[1;32m      6\u001b[0m \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:9976\u001b[0m, in \u001b[0;36mDataFrame.join\u001b[0;34m(self, other, on, how, lsuffix, rsuffix, sort, validate)\u001b[0m\n\u001b[1;32m   9813\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mjoin\u001b[39m(\n\u001b[1;32m   9814\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   9815\u001b[0m     other: DataFrame \u001b[39m|\u001b[39m Series \u001b[39m|\u001b[39m \u001b[39mlist\u001b[39m[DataFrame \u001b[39m|\u001b[39m Series],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   9821\u001b[0m     validate: \u001b[39mstr\u001b[39m \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   9822\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame:\n\u001b[1;32m   9823\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   9824\u001b[0m \u001b[39m    Join columns of another DataFrame.\u001b[39;00m\n\u001b[1;32m   9825\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   9974\u001b[0m \u001b[39m    5  K1  A5   B1\u001b[39;00m\n\u001b[1;32m   9975\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 9976\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_join_compat(\n\u001b[1;32m   9977\u001b[0m         other,\n\u001b[1;32m   9978\u001b[0m         on\u001b[39m=\u001b[39;49mon,\n\u001b[1;32m   9979\u001b[0m         how\u001b[39m=\u001b[39;49mhow,\n\u001b[1;32m   9980\u001b[0m         lsuffix\u001b[39m=\u001b[39;49mlsuffix,\n\u001b[1;32m   9981\u001b[0m         rsuffix\u001b[39m=\u001b[39;49mrsuffix,\n\u001b[1;32m   9982\u001b[0m         sort\u001b[39m=\u001b[39;49msort,\n\u001b[1;32m   9983\u001b[0m         validate\u001b[39m=\u001b[39;49mvalidate,\n\u001b[1;32m   9984\u001b[0m     )\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:10043\u001b[0m, in \u001b[0;36mDataFrame._join_compat\u001b[0;34m(self, other, on, how, lsuffix, rsuffix, sort, validate)\u001b[0m\n\u001b[1;32m  10037\u001b[0m \u001b[39m# Mypy thinks the RHS is a\u001b[39;00m\n\u001b[1;32m  10038\u001b[0m \u001b[39m# \"Union[DataFrame, Series, Iterable[Union[DataFrame, Series]]]\" whereas\u001b[39;00m\n\u001b[1;32m  10039\u001b[0m \u001b[39m# the LHS is an \"Iterable[DataFrame]\", but in reality both types are\u001b[39;00m\n\u001b[1;32m  10040\u001b[0m \u001b[39m# \"Iterable[Union[DataFrame, Series]]\" due to the if statements\u001b[39;00m\n\u001b[1;32m  10041\u001b[0m frames \u001b[39m=\u001b[39m [cast(\u001b[39m\"\u001b[39m\u001b[39mDataFrame | Series\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m)] \u001b[39m+\u001b[39m \u001b[39mlist\u001b[39m(other)\n\u001b[0;32m> 10043\u001b[0m can_concat \u001b[39m=\u001b[39m \u001b[39mall\u001b[39m(df\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mis_unique \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m frames)\n\u001b[1;32m  10045\u001b[0m \u001b[39m# join indexes only using concat\u001b[39;00m\n\u001b[1;32m  10046\u001b[0m \u001b[39mif\u001b[39;00m can_concat:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:10043\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m  10037\u001b[0m \u001b[39m# Mypy thinks the RHS is a\u001b[39;00m\n\u001b[1;32m  10038\u001b[0m \u001b[39m# \"Union[DataFrame, Series, Iterable[Union[DataFrame, Series]]]\" whereas\u001b[39;00m\n\u001b[1;32m  10039\u001b[0m \u001b[39m# the LHS is an \"Iterable[DataFrame]\", but in reality both types are\u001b[39;00m\n\u001b[1;32m  10040\u001b[0m \u001b[39m# \"Iterable[Union[DataFrame, Series]]\" due to the if statements\u001b[39;00m\n\u001b[1;32m  10041\u001b[0m frames \u001b[39m=\u001b[39m [cast(\u001b[39m\"\u001b[39m\u001b[39mDataFrame | Series\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m)] \u001b[39m+\u001b[39m \u001b[39mlist\u001b[39m(other)\n\u001b[0;32m> 10043\u001b[0m can_concat \u001b[39m=\u001b[39m \u001b[39mall\u001b[39m(df\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39mis_unique \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m frames)\n\u001b[1;32m  10045\u001b[0m \u001b[39m# join indexes only using concat\u001b[39;00m\n\u001b[1;32m  10046\u001b[0m \u001b[39mif\u001b[39;00m can_concat:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'index'"
+     ]
+    }
+   ],
    "source": [
     "# filtered_df = filtered_df.sample(n=50, random_state=2).reset_index()\n",
     "\n",
@@ -79,28 +124,32 @@
     "    train_ids.append(train_id)\n",
     "    test_ids.append(test_id)\n",
     "    val_ids.append(val_id)\n",
-    "    \n",
+    "\n",
+    "# one hot\n",
+    "filtered_df = author_to_onehop(filtered_df)\n",
     "\n",
     "train_df = filtered_df[filtered_df.id.isin(train_ids)]\n",
     "test_df = filtered_df[filtered_df.id.isin(test_ids)]\n",
     "val_df = filtered_df[filtered_df.id.isin(val_ids)]\n",
     "\n",
     "df_arrs = []\n",
-    "for df in [train_df, test_df, val_df]:\n",
-    "    df = df[['id', 'author']]\n",
     "\n",
+    "\n",
+    "for df in [train_df, test_df, val_df]:\n",
     "    docs = []\n",
     "    docs_unavail_pg_ids = []\n",
     "    for pg_id in df.id:    \n",
     "        try:\n",
-    "            doc = ' '.join(get_book(pg_id, os.path.join(tokens_dirname), level='tokens'))\n",
+    "            tokens = get_book(pg_id, os.path.join(tokens_dirname), level='tokens')[0:512]\n",
+    "            doc = ' '.join(tokens)\n",
     "            docs.append(doc)\n",
     "        except:\n",
     "            docs_unavail_pg_ids.append(pg_id)\n",
-    "    \n",
+    "\n",
     "    df = df[~df.id.isin(docs_unavail_pg_ids)].reset_index()\n",
-    "    df.insert(2, 'text', docs, True)\n",
-    "    \n",
+    "    df = df.drop(columns=['level_0', 'index', 'id', 'title', 'author', 'authoryearofbirth', 'authoryearofdeath'])\n",
+    "    df.insert(0, 'text', docs, True)\n",
+    "    print(df.columns)\n",
     "    df_arrs.append(df)\n",
     "\n",
     "train_df, test_df, val_df = df_arrs"
@@ -108,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0540bff1",
    "metadata": {},
    "outputs": [],
@@ -135,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
