--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "e2adbc46",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "e132fea4",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0938f3d4",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,10 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "df4ee5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "48\n",
+      "48\n"
+     ]
+    }
+   ],
    "source": [
     "# filtered_df = filtered_df.sample(n=50, random_state=2).reset_index()\n",
     "\n",
@@ -94,8 +104,7 @@
     "    test_ids.append(test_id)\n",
     "    val_ids.append(val_id)\n",
     "\n",
-    "# one hot\n",
-    "filtered_df = author_to_onehop(filtered_df)\n",
+    "\n",
     "\n",
     "train_df = filtered_df[filtered_df.id.isin(train_ids)]\n",
     "test_df = filtered_df[filtered_df.id.isin(test_ids)]\n",
@@ -103,8 +112,9 @@
     "\n",
     "df_arrs = []\n",
     "for df in [train_df, test_df, val_df]:\n",
-    "\n",
-    "    docs = []\n",
+    "    # one hot\n",
+    "    df = author_to_onehop(df)\n",
+    "    docs = []   \n",
     "    docs_unavail_pg_ids = []\n",
     "    for pg_id in df.id:    \n",
     "        try:\n",
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0540bff1",
    "metadata": {},
    "outputs": [],
