--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "id": "e2adbc46",
    "metadata": {},
    "outputs": [],
@@ -19,21 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e132fea4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def author_to_onehop(df):\n",
-    "    s = pd.Series(list(df['author']))\n",
-    "    one_hot = pd.get_dummies(s)\n",
-    "    df = pd.concat([df, one_hot], axis=1)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "0938f3d4",
    "metadata": {},
    "outputs": [
@@ -43,7 +29,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,16 +57,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "df4ee5a5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_27326/3138385997.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['author'] = df['author'].astype(str)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48\n",
-      "48\n",
+      "48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_27326/3138385997.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['author'] = df['author'].astype(str)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_27326/3138385997.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['author'] = df['author'].astype(str)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "48\n"
      ]
     }
@@ -113,7 +147,12 @@
     "df_arrs = []\n",
     "for df in [train_df, test_df, val_df]:\n",
     "    # one hot\n",
-    "    df = author_to_onehop(df)\n",
+    "    df['author'] = df['author'].astype(str)\n",
+    "    #missing_values = df['author'].isnull().sum()\n",
+    "    #print(\"Number of missing values in 'author' column: \", missing_values)\n",
+    "\n",
+    "    one_hot = pd.get_dummies(df['author'])\n",
+    "    df = pd.concat([df, one_hot], axis=1)\n",
     "    docs = []   \n",
     "    docs_unavail_pg_ids = []\n",
     "    for pg_id in df.id:    \n",
@@ -137,6 +176,7 @@
     "            new_row = pd.concat([sub_doc, row])\n",
     "            chunk_list.append(new_row)\n",
     "    chunk_df = pd.DataFrame(chunk_list)\n",
+    "\n",
     "    #df.insert(0, 'text', docs, True)\n",
     "    df_arrs.append(chunk_df)\n",
     "\n",
@@ -145,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "id": "0540bff1",
    "metadata": {},
    "outputs": [],
