--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -122,10 +122,10 @@
     "        token_type_ids = inputs[\"token_type_ids\"]\n",
     "\n",
     "        return {\n",
-    "            'ids': torch.tensor(ids, dtype=torch.long),\n",
-    "            'mask': torch.tensor(mask, dtype=torch.long),\n",
-    "            'token_type_ids': torch.tensor(token_type_ids, dtype=torch.long),\n",
-    "            'targets': torch.tensor(self.targets[index], dtype=torch.float)\n",
+    "            'ids': torch.tensor(ids, dtype=torch.long).to(device, dtype=torch.long),\n",
+    "            'mask': torch.tensor(mask, dtype=torch.long.to(device, dtype=torch.long)),\n",
+    "            'token_type_ids': torch.tensor(token_type_ids, dtype=torch.long).to(device, dtype=torch.long),\n",
+    "            'targets': torch.tensor(self.targets[index], dtype=torch.float).to(device, dtype = torch.float)\n",
     "        }\n",
     "\n",
     "\n",
@@ -262,9 +262,9 @@
     "for epoch in range(EPOCHS):\n",
     "    model.train()\n",
     "    for _, data in enumerate(training_loader, 0):\n",
-    "        outputs = model(data['ids'].to(device, dtype=torch.long),\n",
-    "                        attention_mask=data['mask'].to(device, dtype=torch.long),\n",
-    "                        token_type_ids=data['token_type_ids'].to(device, dtype=torch.long))\n",
+    "        outputs = model(data['ids'],\n",
+    "                        attention_mask=data['mask'],\n",
+    "                        token_type_ids=data['token_type_ids'])\n",
     "        pooled_output = outputs.pooler_output\n",
     "        # print(pooled_output.shape)\n",
     "        # pooled_output = model.pooler(pooled_output.permute(0, 2, 1)).squeeze()\n",
@@ -283,9 +283,9 @@
     "        fin_targets = []\n",
     "        fin_outputs = []\n",
     "        for _, data in enumerate(val_df, 0):\n",
-    "            outputs = model(data['ids'].to(device, dtype=torch.long),\n",
-    "                            attention_mask=data['mask'].to(device, dtype=torch.long),\n",
-    "                            token_type_ids=data['token_type_ids'].to(device, dtype=torch.long))\n",
+    "            outputs = model(data['ids'],\n",
+    "                            attention_mask=data['mask'],\n",
+    "                            token_type_ids=data['token_type_ids'])\n",
     "            pooled_output = outputs.pooler_output\n",
     "            # pooled_output = model.pooler(pooled_output.permute(0, 2, 1)).squeeze()\n",
     "            logits = model.classifier(pooled_output)\n",
@@ -301,9 +301,9 @@
     "    fin_targets = []\n",
     "    fin_outputs = []\n",
     "    for _, data in enumerate(test_df, 0):\n",
-    "        outputs = model(data['input_ids'].to(device, dtype=torch.long),\n",
-    "                        attention_mask=data['mask'].to(device, dtype=torch.long),\n",
-    "                        token_type_ids=data['token_type_ids'].to(device, dtype=torch.long))\n",
+    "        outputs = model(data['input_ids'],\n",
+    "                        attention_mask=data['mask'],\n",
+    "                        token_type_ids=data['token_type_ids'])\n",
     "        pooled_output = outputs.pooler_output\n",
     "        logits = model.classifier(pooled_output)\n",
     "        preds = torch.argmax(logits, dim=1)\n",
