--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "        return {\n",
     "            'ids': torch.tensor(ids, dtype=torch.long).to(device, dtype=torch.long),\n",
-    "            'mask': torch.tensor(mask, dtype=torch.long.to(device, dtype=torch.long)),\n",
+    "            'mask': torch.tensor(mask, dtype=torch.long).to(device, dtype=torch.long),\n",
     "            'token_type_ids': torch.tensor(token_type_ids, dtype=torch.long).to(device, dtype=torch.long),\n",
     "            'targets': torch.tensor(self.targets[index], dtype=torch.float).to(device, dtype = torch.float)\n",
     "        }\n",
