--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -185,8 +185,6 @@
     "    param.requires_grad = True\n",
     "\n",
     "# Fine-tune the model on your downstream task\n",
-    "train_dataset = train_df\n",
-    "dev_dataset = val_df\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
     "model.to(device)\n",
@@ -197,29 +195,6 @@
     "ExecuteTime": {
      "start_time": "2023-04-07T15:46:34.840704Z",
      "end_time": "2023-04-07T15:46:34.857974Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "# train_inputs = tokenizer(train_dataset['text'].tolist(),\n",
-    "#                          padding=True,\n",
-    "#                          truncation=True,\n",
-    "#                          return_tensors='pt')\n",
-    "# train_labels = torch.tensor(train_dataset.drop('text', axis=1).values) \\\n",
-    "#     .to(device, dtype=torch.float)\n",
-    "# val_inputs = tokenizer(dev_dataset['text'].tolist(), padding=True, truncation=True, return_tensors='pt')\n",
-    "# val_labels = torch.tensor(dev_dataset.drop('text', axis=1).values) \\\n",
-    "#     .to(device, dtype=torch.float)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-07T15:46:53.568581Z",
-     "end_time": "2023-04-07T15:46:53.576269Z"
     }
    }
   },
@@ -282,7 +257,7 @@
     "        model.eval()\n",
     "        fin_targets = []\n",
     "        fin_outputs = []\n",
-    "        for _, data in enumerate(val_df, 0):\n",
+    "        for _, data in enumerate(val_loader, 0):\n",
     "            outputs = model(data['ids'],\n",
     "                            attention_mask=data['mask'],\n",
     "                            token_type_ids=data['token_type_ids'])\n",
@@ -300,7 +275,7 @@
     "with torch.no_grad():\n",
     "    fin_targets = []\n",
     "    fin_outputs = []\n",
-    "    for _, data in enumerate(test_df, 0):\n",
+    "    for _, data in enumerate(test_loader, 0):\n",
     "        outputs = model(data['input_ids'],\n",
     "                        attention_mask=data['mask'],\n",
     "                        token_type_ids=data['token_type_ids'])\n",
