--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -268,7 +268,7 @@
     "            labels = torch.argmax(data['targets'], dim=1)\n",
     "            fin_targets.extend(labels)\n",
     "            fin_outputs.extend(preds)\n",
-    "        acc = (fin_targets == fin_outputs).float().mean().item()\n",
+    "        acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
     "        print(f\"Epoch {epoch + 1}, Dev accuracy = {acc}\")\n",
     "\n",
     "# Use the fine-tuned model to make predictions on new data\n",
@@ -276,16 +276,17 @@
     "    fin_targets = []\n",
     "    fin_outputs = []\n",
     "    for _, data in enumerate(test_loader, 0):\n",
-    "        outputs = model(data['input_ids'],\n",
+    "        outputs = model(data['ids'],\n",
     "                        attention_mask=data['mask'],\n",
     "                        token_type_ids=data['token_type_ids'])\n",
     "        pooled_output = outputs.pooler_output\n",
     "        logits = model.classifier(pooled_output)\n",
     "        preds = torch.argmax(logits, dim=1)\n",
+    "        labels = torch.argmax(data['targets'], dim=1)\n",
     "        fin_targets.extend(labels)\n",
     "        fin_outputs.extend(preds)\n",
-    "    test_df['truth'] = fin_targets\n",
-    "    test_df['pred'] = fin_outputs\n",
+    "    test_df['truth'] = fin_targets.cpu().detach().numpy().tolist()\n",
+    "    test_df['pred'] = fin_outputs.cpu().detach().numpy().tolist()\n",
     "\n",
     "test_df['text', 'truth', 'pred']"
    ],
