--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -269,7 +269,7 @@
     "            fin_targets.extend(labels)\n",
     "            fin_outputs.extend(preds)\n",
     "        acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
-    "        print(f\"Epoch {epoch + 1}, Dev accuracy = {acc}\")\n",
+    "        print(f\"Epoch {epoch + 1}, Val accuracy = {acc}\")\n",
     "\n",
     "# Use the fine-tuned model to make predictions on new data\n",
     "with torch.no_grad():\n",
@@ -283,12 +283,13 @@
     "        logits = model.classifier(pooled_output)\n",
     "        preds = torch.argmax(logits, dim=1)\n",
     "        labels = torch.argmax(data['targets'], dim=1)\n",
-    "        fin_targets.extend(labels)\n",
-    "        fin_outputs.extend(preds)\n",
-    "    test_df['truth'] = fin_targets.cpu().detach().numpy().tolist()\n",
-    "    test_df['pred'] = fin_outputs.cpu().detach().numpy().tolist()\n",
-    "\n",
-    "test_df['text', 'truth', 'pred']"
+    "        fin_targets.extend(labels.cpu().detach().numpy().tolist())\n",
+    "        fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
+    "    test_df['truth'] = fin_targets\n",
+    "    test_df['pred'] = fin_outputs\n",
+    "    acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
+    "print(f\"Test accuracy = {acc}\")\n",
+    "test_df[['text', 'truth', 'pred']]"
    ],
    "metadata": {
     "collapsed": false,
