--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -15,8 +15,6 @@
     "#!pip install transformer\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "#!pip install tensorflow-macos\n",
     "from transformers import BertModel, BertTokenizer\n",
     "from torch.utils.data import Dataset, DataLoader, RandomSampler, SequentialSampler\n",
     "import torch\n",
@@ -59,7 +57,8 @@
     "\n",
     "# Load the pre-trained BERT model and tokenizer\n",
     "model_name = 'bert-base-uncased'\n",
-    "tokenizer = BertTokenizer.from_pretrained(model_name)\n"
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "device"
    ],
    "metadata": {
     "collapsed": false,
