--- a/sampling.ipynb
+++ b/sampling.ipynb
@@ -343,6 +343,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
@@ -354,12 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sampling(df):\n",
-    "    raw_train_data, test_data = train_test_split(df, test_size=0.2, shuffle=True)\n",
+    "    raw_train_data, test_data = train_test_split(df, test_size=0.2, shuffle=True, stratify=df['label'], random_state=42)\n",
     "    skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "    X = list(raw_train_data['text'])\n",
     "    y = raw_train_data['label'].apply(lambda x : get_y(x))\n",
@@ -384,16 +391,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_63033/2192322026.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_63033/1178568678.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  train_ds = train_ds.append(df.iloc[i], ignore_index=True)\n",
-      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_63033/2192322026.py:15: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/h4/wblr9zyj0633z0hcpl2g881w0000gn/T/ipykernel_63033/1178568678.py:15: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  val_ds = val_ds.append(df.iloc[i], ignore_index=True)\n"
      ]
     }
@@ -403,141 +410,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the number of author in each dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1094 17504 4376\n"
+      "Size of Test DataSet: 1094\n",
+      "Size of Train DataSet: 17504\n",
+      "Size of Validation DataSet: 4376\n",
+      "Num of authors in test: 211\n",
+      "Num of authors in tran: 211\n",
+      "Num of authors in validation: 211\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2050</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>lancashire illustration emigrants at liverpool...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1221</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>produced from images available at the internet...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5255</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>the poems of madison cawein volume ii new worl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>572</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>produced from scanned images of public domain ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1151</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>generously made available by internet librarie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4709</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>of william shakespeare illustration the works ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3091</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>produced from images generously made available...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1361</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>the miracle songs of jesus by wilson macdonald...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1684</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>transcriber note text enclosed by underscores ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>571</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>the sandman his farm stories sandman stories e...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1094 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  label  \\\n",
-       "2050  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "1221  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "5255  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "572   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "1151  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "...                                                 ...   \n",
-       "4709  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "3091  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "1361  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "1684  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "571   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "\n",
-       "                                                   text  \n",
-       "2050  lancashire illustration emigrants at liverpool...  \n",
-       "1221  produced from images available at the internet...  \n",
-       "5255  the poems of madison cawein volume ii new worl...  \n",
-       "572   produced from scanned images of public domain ...  \n",
-       "1151  generously made available by internet librarie...  \n",
-       "...                                                 ...  \n",
-       "4709  of william shakespeare illustration the works ...  \n",
-       "3091  produced from images generously made available...  \n",
-       "1361  the miracle songs of jesus by wilson macdonald...  \n",
-       "1684  transcriber note text enclosed by underscores ...  \n",
-       "571   the sandman his farm stories sandman stories e...  \n",
-       "\n",
-       "[1094 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(test_data), len(train_ds), len(val_ds))\n",
-    "test_data"
+    "print(\"Size of Test DataSet: \" + str(len(test_data)))\n",
+    "print(\"Size of Train DataSet: \" + str(len(train_ds)))\n",
+    "print(\"Size of Validation DataSet: \" + str(len(val_ds)))\n",
+    "authors_in_test = test_data['label'].tolist()\n",
+    "authors_in_test  = [str(x) for x in authors_in_test]\n",
+    "\n",
+    "authors_in_train = train_ds['label'].tolist()\n",
+    "authors_in_train  = [str(x) for x in authors_in_train]\n",
+    "\n",
+    "authors_in_val = val_ds['label'].tolist()\n",
+    "authors_in_val = [str(x) for x in authors_in_val]\n",
+    "\n",
+    "print(\"Num of authors in test: \" + str(len(set(authors_in_test))))\n",
+    "print(\"Num of authors in tran: \" + str(len(set(authors_in_train))))\n",
+    "print(\"Num of authors in validation: \" + str(len(set(authors_in_val))))\n",
+    "\n"
    ]
   }
  ],
