--- a/sampling.ipynb
+++ b/sampling.ipynb
@@ -9246,6 +9246,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "test_data.to_csv('train.csv', index=False)\n",
+    "train_ds.to_csv('test.csv', index=False)\n",
+    "val_ds.to_csv('val.csv', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-10T01:44:28.630721Z",
+     "end_time": "2023-04-10T01:44:28.826883Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
