--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -61,7 +61,7 @@
     "TRAIN_BATCH_SIZE = 8\n",
     "VALID_BATCH_SIZE = 4\n",
     "EPOCHS = 5\n",
-    "LEARNING_RATE = 8e-05\n",
+    "LEARNING_RATE = 1e-04\n",
     "NUM_CLASSES = len(ast.literal_eval(train_df.loc[0,'label']))\n",
     "device = 'cuda' if cuda.is_available() else 'cpu'\n",
     "\n",
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def loss_fn(outputs, targets):\n",
-    "    return torch.nn.BCEWithLogitsLoss()(outputs, targets)"
+    "    return torch.nn.CrossEntropyLoss()(outputs, targets)"
    ],
    "metadata": {
     "collapsed": false,
@@ -367,18 +367,27 @@
     "\n",
     "def train(epoch, training_loader: DataLoader, val_loader: DataLoader, model: BertModel):\n",
     "    early_stopper = EarlyStopper(patience=3)\n",
+    "\n",
     "    for epoch in range(epoch):\n",
+    "        fin_targets = []\n",
+    "        fin_outputs = []\n",
     "        model.train()\n",
     "        for _, data in enumerate(training_loader, 0):\n",
     "            outputs = model(data['ids'],\n",
     "                            attention_mask=data['mask'],\n",
     "                            token_type_ids=data['token_type_ids'])\n",
+    "            preds = torch.argmax(outputs, dim=1)\n",
+    "            labels = torch.argmax(data['targets'], dim=1)\n",
+    "            fin_targets.extend(labels)\n",
+    "            fin_outputs.extend(preds)\n",
     "            loss = loss_fn(outputs, data['targets'])\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
     "            if _ % 100 == 0:\n",
-    "                print(f\"Epoch {epoch + 1}, Loss= {loss.item()}\")\n",
+    "                acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
+    "                print(f\"Epoch {epoch + 1}, Loss= {loss.item()}, Train accuracy = {acc}\")\n",
+    "\n",
     "        # Evaluate the model on the dev set\n",
     "        validation_loss = val(epoch, val_loader, model)\n",
     "        if early_stopper.early_stop(validation_loss):\n",
@@ -388,20 +397,21 @@
     "def test(test_loader, model: BertModel):\n",
     "    # Use the fine-tuned model to make predictions on new data\n",
     "    with torch.no_grad():\n",
+    "        model.eval()\n",
     "        fin_targets = []\n",
-    "    fin_outputs = []\n",
-    "    for _, data in enumerate(test_loader, 0):\n",
-    "        outputs = model(data['ids'],\n",
-    "                        attention_mask=data['mask'],\n",
-    "                        token_type_ids=data['token_type_ids'])\n",
-    "        preds = torch.argmax(outputs, dim=1)\n",
-    "        labels = torch.argmax(data['targets'], dim=1)\n",
-    "        fin_targets.extend(labels.cpu().detach().numpy().tolist())\n",
-    "        fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
-    "    test_df['truth'] = fin_targets\n",
-    "    test_df['pred'] = fin_outputs\n",
-    "    acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
-    "    print(f\"Test accuracy = {acc}\")\n",
+    "        fin_outputs = []\n",
+    "        for _, data in enumerate(test_loader, 0):\n",
+    "            outputs = model(data['ids'],\n",
+    "                            attention_mask=data['mask'],\n",
+    "                            token_type_ids=data['token_type_ids'])\n",
+    "            preds = torch.argmax(outputs, dim=1)\n",
+    "            labels = torch.argmax(data['targets'], dim=1)\n",
+    "            fin_targets.extend(labels.cpu().detach().numpy().tolist())\n",
+    "            fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
+    "        test_df['truth'] = fin_targets\n",
+    "        test_df['pred'] = fin_outputs\n",
+    "        acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
+    "        print(f\"Test accuracy = {acc}\")\n",
     "\n",
     "\n",
     "train(EPOCHS, training_loader, val_loader, model)\n",
