--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -29,9 +29,9 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('train.csv')\n",
-    "val_df = pd.read_csv('val.csv')\n",
-    "test_df = pd.read_csv('test.csv')\n",
+    "train_df = pd.read_csv('tail_train.csv')\n",
+    "val_df = pd.read_csv('tail_val.csv')\n",
+    "test_df = pd.read_csv('tail_test.csv')\n",
     "#set(val_df['author'].tolist()+train_df['author'].tolist())"
    ],
    "metadata": {
@@ -58,10 +58,10 @@
    "source": [
     "#https://colab.research.google.com/github/abhimishra91/transformers-tutorials/blob/master/transformers_multi_label_classification.ipynb#scrollTo=7KnNeQx6SI78\n",
     "MAX_LEN = 512\n",
-    "TRAIN_BATCH_SIZE = 8\n",
-    "VALID_BATCH_SIZE = 4\n",
+    "TRAIN_BATCH_SIZE = 24\n",
+    "VALID_BATCH_SIZE = 24\n",
     "EPOCHS = 5\n",
-    "LEARNING_RATE = 1e-04\n",
+    "LEARNING_RATE = 2e-05\n",
     "NUM_CLASSES = len(ast.literal_eval(train_df.loc[0,'label']))\n",
     "device = 'cuda' if cuda.is_available() else 'cpu'\n",
     "\n",
@@ -357,11 +357,15 @@
     "                            token_type_ids=data['token_type_ids'])\n",
     "            preds = torch.argmax(outputs, dim=1)\n",
     "            labels = torch.argmax(data['targets'], dim=1)\n",
-    "            fin_targets.extend(labels)\n",
-    "            fin_outputs.extend(preds)\n",
+    "            fin_targets.extend(labels.cpu().detach().numpy().tolist())\n",
+    "            fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
     "            loss = loss_fn(outputs, data['targets'])\n",
     "        acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
     "        print(f\"Epoch {epoch + 1}, Val accuracy = {acc}\")\n",
+    "        print(f'Val truth:{fin_targets}')\n",
+    "        print(f'Val output:{fin_outputs}')\n",
+    "        val_df['truth'] = fin_targets\n",
+    "        val_df['pred'] = fin_outputs\n",
     "        return loss\n",
     "\n",
     "\n",
@@ -378,8 +382,8 @@
     "                            token_type_ids=data['token_type_ids'])\n",
     "            preds = torch.argmax(outputs, dim=1)\n",
     "            labels = torch.argmax(data['targets'], dim=1)\n",
-    "            fin_targets.extend(labels)\n",
-    "            fin_outputs.extend(preds)\n",
+    "            fin_targets.extend(labels.cpu().detach().numpy().tolist())\n",
+    "            fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
     "            loss = loss_fn(outputs, data['targets'])\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -387,11 +391,13 @@
     "            if _ % 100 == 0:\n",
     "                acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
     "                print(f\"Epoch {epoch + 1}, Loss= {loss.item()}, Train accuracy = {acc}\")\n",
+    "                print(f'Train truth:{fin_targets}')\n",
+    "                print(f'Train output:{fin_outputs}')\n",
     "\n",
     "        # Evaluate the model on the dev set\n",
     "        validation_loss = val(epoch, val_loader, model)\n",
-    "        if early_stopper.early_stop(validation_loss):\n",
-    "            break\n",
+    "        # if early_stopper.early_stop(validation_loss):\n",
+    "        #     break\n",
     "\n",
     "\n",
     "def test(test_loader, model: BertModel):\n",
@@ -413,10 +419,7 @@
     "        acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
     "        print(f\"Test accuracy = {acc}\")\n",
     "\n",
-    "\n",
-    "train(EPOCHS, training_loader, val_loader, model)\n",
-    "test(test_loader, model)\n",
-    "test_df[['text', 'truth', 'pred']]"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -424,6 +427,20 @@
      "start_time": "2023-04-10T02:29:09.859257Z",
      "end_time": "2023-04-10T02:29:18.629851Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train(EPOCHS, training_loader, val_loader, model)\n",
+    "# test(test_loader, model)\n",
+    "# test_df[['text', 'truth', 'pred']]\n",
+    "val_df[['text', 'truth', 'pred']]"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
