--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -16,6 +16,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from transformers import BertModel, BertTokenizer, BertConfig\n",
+    "import transformers\n",
     "from torch.utils.data import Dataset, DataLoader, RandomSampler, SequentialSampler\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -58,11 +59,11 @@
    "source": [
     "#https://colab.research.google.com/github/abhimishra91/transformers-tutorials/blob/master/transformers_multi_label_classification.ipynb#scrollTo=7KnNeQx6SI78\n",
     "MAX_LEN = 512\n",
-    "TRAIN_BATCH_SIZE = 24\n",
-    "VALID_BATCH_SIZE = 24\n",
-    "EPOCHS = 5\n",
-    "LEARNING_RATE = 2e-05\n",
-    "NUM_CLASSES = len(ast.literal_eval(train_df.loc[0,'label']))\n",
+    "TRAIN_BATCH_SIZE = 8\n",
+    "VALID_BATCH_SIZE = 8\n",
+    "EPOCHS = 20\n",
+    "LEARNING_RATE = 5e-05\n",
+    "NUM_CLASSES = len(ast.literal_eval(train_df.loc[0, 'label']))\n",
     "device = 'cuda' if cuda.is_available() else 'cpu'\n",
     "\n",
     "# Load the pre-trained BERT model and tokenizer\n",
@@ -108,9 +109,9 @@
     "        y = self.data['label'].apply(get_y)\n",
     "        y1 = []\n",
     "        for i in y:\n",
-    "                y1.append(i)\n",
+    "            y1.append(i)\n",
     "        y1 = np.asarray(y1)\n",
-    "        self.targets =np.asarray(y1)\n",
+    "        self.targets = np.asarray(y1)\n",
     "        self.max_len = max_len\n",
     "\n",
     "    def __len__(self):\n",
@@ -217,6 +218,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "class BertForClassification(nn.Module):\n",
     "    def __init__(self, config):\n",
     "        super(BertForClassification, self).__init__()\n",
@@ -233,9 +236,9 @@
     "\n",
     "model = BertForClassification(BertConfig())\n",
     "# Fine-tune the model on your downstream task\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "\n",
     "for param in model.bert.encoder.layer.parameters():\n",
-    "        param.requires_grad = False\n",
+    "    param.requires_grad = False\n",
     "    # Unfreeze the weights of the last 4 layers\n",
     "for param in model.bert.encoder.layer[-4:].parameters():\n",
     "    param.requires_grad = True\n",
@@ -249,6 +252,21 @@
      "start_time": "2023-04-10T02:35:16.422641Z",
      "end_time": "2023-04-10T02:35:17.879183Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "num_train_optimization_steps = len(training_loader) * EPOCHS\n",
+    "optimizer = transformers.AdamW(model.parameters(), lr=LEARNING_RATE, correct_bias=False)\n",
+    "scheduler = transformers.get_linear_schedule_with_warmup(optimizer,\n",
+    "                                                         int(num_train_optimization_steps *0.1),\n",
+    "                                                         num_train_optimization_steps)"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -388,11 +406,12 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
+    "            scheduler.step()\n",
     "            if _ % 100 == 0:\n",
     "                acc = (torch.tensor(fin_targets) == torch.tensor(fin_outputs)).float().mean().item()\n",
     "                print(f\"Epoch {epoch + 1}, Loss= {loss.item()}, Train accuracy = {acc}\")\n",
-    "                print(f'Train truth:{fin_targets}')\n",
-    "                print(f'Train output:{fin_outputs}')\n",
+    "                # print(f'Train truth:{fin_targets}')\n",
+    "                # print(f'Train output:{fin_outputs}')\n",
     "\n",
     "        # Evaluate the model on the dev set\n",
     "        validation_loss = val(epoch, val_loader, model)\n",
