--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -72,7 +72,8 @@
     "# Load the pre-trained BERT model and tokenizer\n",
     "model_name = 'bert-base-uncased'\n",
     "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
-    "pattern = 'max'\n",
+    "pattern = 'default'\n",
+    "layer = 4\n",
     "device"
    ],
    "metadata": {
@@ -170,11 +171,12 @@
    "outputs": [],
    "source": [
     "class BertForClassification(nn.Module):\n",
-    "    def __init__(self, config, pattern='default'):\n",
+    "    def __init__(self, config, pattern='default', layer=4):\n",
     "        super(BertForClassification, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(model_name, config=config)\n",
     "        self.dropout = nn.Dropout(config.hidden_dropout_prob)\n",
     "        self.pattern = pattern\n",
+    "        self.layer = layer\n",
     "        if self.pattern == 'cat':\n",
     "            self.classifier = nn.Linear(config.hidden_size * 4, NUM_CLASSES)\n",
     "        else:\n",
@@ -188,8 +190,11 @@
     "            encoded_layer = outputs.hidden_states\n",
     "\n",
     "            outputs = []\n",
-    "            for l in encoded_layer[-4:]:\n",
-    "                outputs.append(l[:, 0].unsqueeze(1))\n",
+    "            if self.layer == 4:\n",
+    "                for l in encoded_layer[-4:]:\n",
+    "                    outputs.append(l[:, 0].unsqueeze(1))\n",
+    "            else:\n",
+    "                outputs.append(encoded_layer[-1][:, 0].unsqueeze(1))\n",
     "            outputs = torch.cat(outputs, dim=1)\n",
     "            if self.pattern == 'max':\n",
     "                outputs, _ = torch.max(outputs, dim=1)\n",
@@ -237,7 +242,7 @@
     }
    ],
    "source": [
-    "model = BertForClassification(BertConfig(output_hidden_states=True), pattern=pattern)\n",
+    "model = BertForClassification(BertConfig(output_hidden_states=True), pattern=pattern, layer=layer)\n",
     "# Fine-tune the model on your downstream task\n",
     "for param in model.bert.parameters():\n",
     "    param.requires_grad = False\n",
