--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -16,13 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:49.592452Z",
-     "start_time": "2023-04-12T18:48:47.988424Z"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -40,7 +34,10 @@
     "from tqdm import tqdm\n",
     "import ast\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -57,11 +54,7 @@
     "val_df = pd.read_csv('final_dataset_val.csv')\n",
     "test_df = pd.read_csv('final_dataset_test.csv')\n",
     "# train_df.groupby(['label']).size().plot.bar()\n",
-    "#set(val_df['author'].tolist()+train_df['author'].tolist())\n",
-    "\n",
-    "train_df = train_df[0:5]\n",
-    "val_df = val_df[0:5]\n",
-    "test_df = test_df[0:5]"
+    "#set(val_df['author'].tolist()+train_df['author'].tolist())\n"
    ]
   },
   {
@@ -113,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Creating Dataset"
+    "## 3. Creating Dataset\n",
+    "we chop the book into several paragraphs each has 512 words, and convert words into word embeddings"
    ]
   },
   {
@@ -195,7 +189,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. BERT Class"
+    "## 4. BERT Class\n",
+    "input -> Bert -> Pooling layer -> linear classifier"
    ]
   },
   {
@@ -246,14 +241,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
+   "source": [
+    "An early strategy, if validation accuracy won't improve in 5 times, it ends epochs."
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-12T18:48:57.447886Z",
-     "start_time": "2023-04-12T18:48:57.445418Z"
-    }
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#https://stackoverflow.com/questions/71998978/early-stopping-in-pytorch\n",
@@ -273,7 +271,19 @@
     "            if self.counter >= self.patience:\n",
     "                return True\n",
     "        return False"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We use cross entropy loss functon for multiple classification, and use ADAM to do gradient descent."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -344,7 +354,6 @@
     "            outputs = model(input_ids=data['ids'].squeeze(1),\n",
     "                            attention_mask=data['mask'])\n",
     "            preds = torch.argmax(outputs, dim=1)\n",
-    "            #print(data['targets'])\n",
     "            fin_targets.extend(data['targets'].cpu().detach().numpy().tolist())\n",
     "            fin_outputs.extend(preds.cpu().detach().numpy().tolist())\n",
     "            loss = loss_fn(outputs, data['targets'])\n",
@@ -359,8 +368,6 @@
     "        history['acc'].append(acc)\n",
     "        \n",
     "        print(f\"Epoch {epoch + 1}, Loss= {total_loss_train}, Train accuracy = {acc}\")\n",
-    "        # print(f'Train truth:{fin_targets}')\n",
-    "        # print(f'Train output:{fin_outputs}')\n",
     "\n",
     "        # Evaluate the model on the dev set\n",
     "        validation_loss = val(epoch, val_loader, model)\n",
@@ -390,6 +397,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Bert is a large model with 110 million parameters, to accelerate the training speed, we freeze weights in the embedding layer and top 8 encode layers. Only fine tune the last 4 layers and pooling layer."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -397,10 +413,8 @@
    "source": [
     "def make_model(pattern):\n",
     "    model = BertForClassification(BertConfig(output_hidden_states=True), pattern=pattern, layer=4)\n",
-    "    # Fine-tune the model on your downstream task\n",
     "    for param in model.bert.parameters():\n",
     "        param.requires_grad = False\n",
-    "        # Unfreeze the weights of the last 4 layers\n",
     "    for param in model.bert.encoder.layer[-4:].parameters():\n",
     "        param.requires_grad = True\n",
     "    for param in model.bert.pooler.parameters():\n",
