--- a/sampling.ipynb
+++ b/sampling.ipynb
@@ -375,6 +375,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "generate one hot vector for label"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
@@ -464,7 +473,6 @@
     }
    ],
    "source": [
-    "\n",
     "\n",
     "# split to 512\n",
     "chunk_size = 512\n",
