--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -17,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -34,10 +35,7 @@
     "from tqdm import tqdm\n",
     "import ast\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -50,9 +48,9 @@
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('final_dataset_train.csv')\n",
-    "val_df = pd.read_csv('final_dataset_val.csv')\n",
-    "test_df = pd.read_csv('final_dataset_test.csv')\n",
+    "train_df = pd.read_csv('svm_2000_train.csv')\n",
+    "val_df = pd.read_csv('svm_2000_val.csv')\n",
+    "test_df = pd.read_csv('svm_2000_test.csv')\n",
     "# train_df.groupby(['label']).size().plot.bar()\n",
     "#set(val_df['author'].tolist()+train_df['author'].tolist())\n"
    ]
@@ -86,12 +84,14 @@
     }
    ],
    "source": [
-    "#https://colab.research.google.com/github/abhimishra91/transformers-tutorials/blob/master/transformers_multi_label_classification.ipynb#scrollTo=7KnNeQx6SI78\n",
-    "#https://github.com/marcellusruben/medium-resources/blob/main/Text_Classification_BERT/bert_medium.ipynb\n",
+    "# Code referenced from https://colab.research.google.com/github/abhimishra91/transformers-tutorials/blob/master/transformers_multi_label_classification.ipynb#scrollTo=7KnNeQx6SI78\n",
+    "# Code referenced from https://github.com/marcellusruben/medium-resources/blob/main/Text_Classification_BERT/bert_medium.ipynb\n",
+    "# inputs size\n",
     "MAX_LEN = 512\n",
-    "TRAIN_BATCH_SIZE = 8\n",
-    "VALID_BATCH_SIZE = 8\n",
-    "EPOCHS = 2 # 20\n",
+    "# Bert batch size, wo do gradient descent every batch\n",
+    "TRAIN_BATCH_SIZE = 24\n",
+    "VALID_BATCH_SIZE = 24\n",
+    "EPOCHS = 10 # 20\n",
     "LEARNING_RATE = 2e-05\n",
     "NUM_CLASSES = len(ast.literal_eval(train_df.loc[0, 'label']))\n",
     "device = 'cuda' if cuda.is_available() else 'cpu'\n",
@@ -219,7 +219,9 @@
     "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, input_ids, attention_mask):\n",
+    "        #Step 1: feed data into bert model\n",
     "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        #Step 2: choose your pooling strategies\n",
     "        if self.pattern != 'default':\n",
     "            encoded_layer = outputs.hidden_states\n",
     "            outputs = []\n",
@@ -235,23 +237,24 @@
     "            pooled_output = self.dropout(outputs)\n",
     "        else:\n",
     "            pooled_output = self.dropout(outputs.pooler_output)\n",
+    "        #Setep 3: feed outputs into linear layer\n",
     "        linear = self.classifier(pooled_output)\n",
+    "        #Setep 4: end with Relu function\n",
     "        logits = self.relu(linear)\n",
     "        return logits"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "An early strategy, if validation accuracy won't improve in 5 times, it ends epochs."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#https://stackoverflow.com/questions/71998978/early-stopping-in-pytorch\n",
@@ -271,19 +274,14 @@
     "            if self.counter >= self.patience:\n",
     "                return True\n",
     "        return False"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We use cross entropy loss functon for multiple classification, and use ADAM to do gradient descent."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -398,12 +396,10 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Bert is a large model with 110 million parameters, to accelerate the training speed, we freeze weights in the embedding layer and top 8 encode layers. Only fine tune the last 4 layers and pooling layer."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -436,6 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train all pooling strategies\n",
     "patterns = ['max', 'mean', 'cat', 'default']"
    ]
   },
@@ -1024,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
