--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -17,6 +17,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip3 install pandas\n",
+    "!pip3 install torch\n",
+    "!pip3 install numpy\n",
+    "!pip3 install scikit-learn\n",
+    "!pip3 install transformers\n",
+    "!pip3 install tqdm\n",
+    "!pip3 install matplotlib"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
